<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ExternalDedicatedStorageSpaceActivity">

        <Button
            android:id="@+id/is_external_storage_can_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/is_external_storage_can_use"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/get_external_storage_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/get_external_storage_path"
            app:layout_constraintStart_toEndOf="@id/is_external_storage_can_use"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/create_persistent_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/create_persistent_file"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/is_external_storage_can_use" />

        <Button
            android:id="@+id/create_cache_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/create_cache_file"
            app:layout_constraintStart_toEndOf="@id/create_persistent_file"
            app:layout_constraintTop_toBottomOf="@id/get_external_storage_path" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/show_space"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>